# memory-server

./: .woodpecker.yml  Cargo.toml  LICENSE  README.md  build.rs  config.toml.example
.github/: FUNDING.yml
docs/: README.md  http-api-v1.md
hooks/: _common.sh  bootstrap.sh  capture-message.sh  post-command.sh  pre-command.sh  pre-compact.sh  session-stop.sh
memory-common/: Cargo.toml
memory-common/src/: config.rs  error.rs  lib.rs  model.rs  protocol.rs  transcript.rs
memory-mcp/: Cargo.toml  build.rs
memory-mcp/src/: http_client.rs  lib.rs  main.rs  mcp.rs  tools.rs
memoryd/: Cargo.toml
memoryd/src/: api.rs  app.rs  db.rs  dream.rs  edges.rs  embed.rs  lib.rs  ollama.rs  rerank.rs  ui.rs
memoryd/templates/ui/: base.html  index.html  login.html  memory.html  project.html  session.html  session_log.html
memoryd/templates/ui/partials/: search_results.html
migrations/: 20260227000000_init.sql  20260228000000_add_fts.sql  20260301000000_add_rule_category.sql  20260302000000_add_session_logs.sql  20260303000000_add_plan_category.sql  20260304000000_add_session_log_chunks.sql  20260309010000_add_sessions_and_messages.sql  20260320000000_add_memory_edges.sql
scripts/: install-skills.sh
skills/: README.md
skills/code-review/: SKILL.md
skills/plan-review/: README.md  SKILL.md
skills/review/: SKILL.md
skills/review-queue/: SKILL.md
skills/review-request/: SKILL.md
skills/review-submit/: SKILL.md
src/: api.rs  app.rs  config.rs  db.rs  dream.rs  embed.rs  error.rs  expand.rs  http_client.rs  lib.rs  main.rs  mcp.rs  model.rs  ollama.rs  rerank.rs  tools.rs  transcript.rs
