[package]
name = "memory-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "memory-server"
path = "src/main.rs"

[[bin]]
name = "dream"
path = "src/bin/dream.rs"

[[bin]]
name = "ingest"
path = "src/bin/ingest.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
pgvector = { version = "0.4.1", features = ["sqlx"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rmcp = { version = "0.16.0", features = ["transport-io"] }
schemars = { version = "1", features = ["uuid1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "derive", "macros", "migrate", "postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "io-std"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "std"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
