[workspace]
members = ["memory-common", "memory-mcp", "memoryd"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rmcp = { version = "1.5.0", features = ["transport-io"] }
schemars = { version = "1", features = ["uuid1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "derive", "macros", "migrate", "postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "io-std", "net"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "std"] }
tower-http = { version = "0.6.8", features = ["trace"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
