[package]
name = "memory-common"
version.workspace = true
edition.workspace = true

[features]
default = []
http-client = ["dep:reqwest"]
rmcp = ["dep:rmcp"]
sqlx = ["dep:sqlx"]

[dependencies]
chrono.workspace = true
reqwest = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
