[package]
name = "memory-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "memory-mcp"
path = "src/main.rs"

[dependencies]
memory-common = { path = "../memory-common", features = ["http-client", "rmcp"] }
serde_json.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
serde-aux = "4.7.0"

[dev-dependencies]
axum = { version = "0.8.8", features = ["json", "macros", "query", "tokio"] }
chrono.workspace = true
